--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.7.3"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
 junit = "4.13.2"
-junitExt = "1.2.1" # rename to clarify it's the 'androidx.test.ext:junit'
+junitExt = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
@@ -15,7 +15,7 @@ googleServices = "4.4.2"
 swiperefreshlayout = "1.1.0"
 lifecycle = "2.8.7"
 room = "2.6.1"
-firebaseBom = "33.10.0"
+firebaseBom = "33.0.0"
 kotlinCoroutines = "1.7.3"
 glide = "4.16.0"
 picasso = "2.8"
